--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,4 @@
+---
 ############################################################
 # +------------------------------------------------------+ #
 # |                       Notes                          | #
@@ -43,7 +44,7 @@
 
 # What is your status page called?
 # Shows up in the browser bar and meta tags
-title: Eggsample Status
+title: OCS / OK Mesonet Status
 
 # Should posts, which have a publish date
 # from the future, be built? Useful for
@@ -89,7 +90,7 @@ defaultContentLanguage: en
 # version 3. If you are just testing,
 # localhost should automatically work.
 #
-# Example: 
+# Example:
 # baseUrl: https://status.example.com/
 #
 # For testing:
@@ -139,16 +140,19 @@ params:
   #   Or it can be used alongside other categories.
   #
   # These are case sensitive.
-  # 
+  #
   # For help, see the wiki:
   # https://github.com/cstate/cstate/wiki/Customization
   categories:
-    - name: North Coast
-      description: The main servers are located here.
+    - name: Datastreams
+      description: The various datastreams we ingest
       closed: true
-    - name: Empty Category
-    - name: Uncategorized
-      untitled: true
+    - name: Ingest and Processing
+      description: Ingest and processing of data
+      closed: true
+    - name: Datacenters and Cloud
+      description: Datacenter and cloud locations
+      closed: true
 
   # These are your systems. Change them to
   # change the amount of components.
@@ -158,16 +162,60 @@ params:
   # For help, see the wiki:
   # https://github.com/cstate/cstate/wiki/Customization
   systems:
-    - name: Gateway
-      category: North Coast
-    - name: Backup Gateway
-      category: North Coast
-    - name: API
-      description: The guts of the application.
-      category: Uncategorized
-    - name: Media Proxy
-      description: This is the service responsible for serving images, audio, and video. It is reliant on our CDN.
-      category: Uncategorized
+    - name: Oklahoma Mesonet
+      description: Oklahoma Mesonet stations
+      category: Datastreams
+    - name: ARS Micronet
+      description: USDA ARS Little Washita Rivershed Micronet stations
+      category: Datastreams
+    - name: FCARS Micronet
+      description: USDA ARS Fort Cobb Rivershed Micronet stations
+      category: Datastreams
+    - name: Experimental
+      description: Experimental stations operated/maintained by the Mesonet
+      category: Datastreams
+    - name: Nexrad Level III Radar
+      description: NWS Nexrad Level III radar transmitted via NOAAport
+      category: Datastreams
+    - name: METAR data
+      description: Weather stations at airports, including ASOS, AWOS, etc
+      category: Datastreams
+    - name: NWS Text Products
+      description: NWS text products, including Watches, Warnings, and Advisories
+      category: Datastreams
+    - name: NDFD
+      description: NWS National Digital Forecast Database (NDFD) data
+      category: Datastreams
+    - name: NWS Model Output
+      description: Model output from NWS numerical models, such as NAM
+      category: Datastreams
+    - name: Mesonet Ingest, QA, and Prodgen
+      description: Ingest and processing of Mesonet and other networks (ARS, FCARS, Experimental, etc)
+      category: Ingest and Processing
+    - name: Radar, NWS Advisories, METAR, and other NOAAport products
+      description: Ingest and processing of NWS products via NOAAport
+      category: Ingest and Processing
+    - name: NDFD and Model output (Secondary Datasets)
+      description: Ingest and processing of forecast data from NWS web and FTP sites
+      category: Ingest and Processing
+    - name: National Weather Center (NWC)
+      description: Offices and Datacenter on OU Campus
+      category: Datacenters and Cloud
+    - name: Kessler Field Station (KFS)
+      description: NOAAport downlink location
+      category: Datacenters and Cloud
+    - name: Amazon Web Services (AWS)
+      description: Cloud presence on AWS
+      category: Datacenters and Cloud
+    - name: OSU Development Cluster (OSU)
+      description: Development servers at OSU Datacenter
+      category: Datacenters and Cloud
+    - name: GitHub/Netlify Cloud (GHB)
+      description: Cloud presence on GitHub and Netlify
+      category: Datacenters and Cloud
+    - name: Google Cloud (GGL)
+      description: Cloud presence on Google
+      category: Datacenters and Cloud
 
   # What date format to use?
   #
@@ -184,7 +232,7 @@ params:
   # Should relative time (x min ago) be used?
   #
   # IMPORTANT: In the frontmatter, the dates MUST be in
-  # the UTC time zone for this to work preperly. If you 
+  # the UTC time zone for this to work preperly. If you
   # use Netlify CMS, all good — the CMS picks UTC time
   # by default. Otherwise, there may be very inaccurate
   # times if multiple time zones are in your issue files.
@@ -194,8 +242,8 @@ params:
   # wish to use relative time but old issues do not have
   # UTC time (and therefore are out of sync by ±24 hours)
   #
-  # Read the wiki for more: 
-  # https://github.com/cstate/cstate/wiki/Customization#time 
+  # Read the wiki for more:
+  # https://github.com/cstate/cstate/wiki/Customization#time
   #
   # If enabled, will display relative times in places like
   # the incident history and summaries instead of using
@@ -205,7 +253,7 @@ params:
   # Default: `true`
   # BOOLEAN; `true`, `false`
   useRelativeTime: true
- 
+
   # If enabled, doesn't show seconds on relative times.
   #
   # With option ON (true):
@@ -282,7 +330,8 @@ params:
   #
   # Recommended: png, bmp, jpg, or gif
   # for best browser support!
-  logo: logo.png
+  # logo: OklahomaMesonetMobileLogo.gif
+  logo: http://return.prod.mesonet.org/return/images/OklahomaMesonetMobileLogo.gif
 
   # This is the description that is shown
   # on the footer and meta tags.
@@ -298,6 +347,11 @@ params:
   #  -
   #    name: Name
   #    link: https://example.com
+  customTabs:
+    - name: About
+      link: /pages/about/
+    - name: Contact
+      link: /pages/contact/
 
   # Disable complex server-side
   # calculations that may impact
