Make status.mesonet.org the base URL for the status website.

--- a/config.yml
+++ b/config.yml
@@ -98,7 +98,7 @@ defaultContentLanguage: en
 #
 # Broken example:
 # baseUrl: /
-baseURL: https://example.com
+baseURL: http://status.mesonet.org/
 
 # For features like Last modified, you
 # need to use a Git repository. If you
